Added real-time update when a user add a new video or delete a video.

--- a/ScribrAPI/appsettings.json
+++ b/ScribrAPI/appsettings.json
@@ -1,8 +1,8 @@
 {
   "AllowedHosts": "*",
-  "ScribrUrl": "https://scribr.azurewebsites.net",
+  "ScribrUrl": "http://localhost:3000",
   "ConnectionStrings": {
-    "ScribrDatabase": "Server=tcp:msascribr.database.windows.net,1433;Initial Catalog=scriber;Persist Security Info=False;User ID=XLIN928;Password=XIzz4#11cDHr;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "ScribrDatabase": "Server=tcp:scribr.database.windows.net,1433;Initial Catalog=ScribrAPI;Persist Security Info=False;User ID=nzmsa;Password=testing2019*;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
