--- a/ScribrAPI/appsettings.json
+++ b/ScribrAPI/appsettings.json
@@ -2,7 +2,7 @@
   "AllowedHosts": "*",
   "ScribrUrl": "http://localhost:3000",
   "ConnectionStrings": {
-    "ScribrDatabase": "Server=tcp:scribr.database.windows.net,1433;Initial Catalog=ScribrAPI;Persist Security Info=False;User ID=nzmsa;Password=testing2019*;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "ScribrDatabase": "Server=tcp:msascribr.database.windows.net,1433;Initial Catalog=scriber;Persist Security Info=False;User ID=XLIN928;Password=XIzz4#11cDHr;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
